<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:theme="@style/ThemeOverlay.Recognize.FullscreenContainer"
    tools:context=".Activities.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/register_button_for_new_users_click_to_go_to_register_screen"
            android:fontFamily="@font/museosans_100"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="25sp"
            andorid:layout_constraintBottom_toBottomOf="parent"
            andorid:layout_constraintEnd_toEndOf="parent"
            andorid:layout_constraintStart_toStartOf="parent"
            andorid:layout_constraintTop_toTopOf="parent"
            andorid:layout_constraintVertical_bias="0.633" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_header_text"
            android:fontFamily="@font/museosans_500"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="50sp"
            andorid:layout_constraintBottom_toBottomOf="parent"
            andorid:layout_constraintEnd_toEndOf="parent"
            andorid:layout_constraintStart_toStartOf="parent"
            andorid:layout_constraintTop_toTopOf="parent"
            andorid:layout_constraintVertical_bias="0.349" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_rectangle"
            android:elevation="30dp"
            android:ellipsize="start"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            andorid:layout_constraintBottom_toBottomOf="parent"
            andorid:layout_constraintEnd_toEndOf="parent"
            andorid:layout_constraintHorizontal_bias="0.552"
            andorid:layout_constraintStart_toStartOf="parent"
            andorid:layout_constraintTop_toTopOf="parent"
            andorid:layout_constraintVertical_bias="0.466" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_rectangle"
            android:elevation="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            andorid:layout_constraintBottom_toBottomOf="parent"
            andorid:layout_constraintEnd_toEndOf="parent"
            andorid:layout_constraintHorizontal_bias="0.552"
            andorid:layout_constraintStart_toStartOf="parent"
            andorid:layout_constraintTop_toTopOf="parent"
            andorid:layout_constraintVertical_bias="0.559" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="101dp"
            android:layout_height="89dp"
            android:background="@drawable/circular_button"
            android:contentDescription="@string/login_button_click_to_login_to_the_application"
            android:elevation="30dp"
            android:text="Go!"
            android:textColor="@color/black"
            android:textSize="30dp"
            andorid:layout_constraintBottom_toBottomOf="parent"
            andorid:layout_constraintEnd_toEndOf="parent"
            andorid:layout_constraintStart_toStartOf="parent"
            andorid:layout_constraintTop_toTopOf="parent"
            andorid:layout_constraintVertical_bias="0.931" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>